--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
   <div class="title">
     <a href="/">Willie Yao</a>
     <a class="extra" href="/">home</a>
-    <a class="extra" href="/about.html">about me</a>
-    <a class="extra" href="/">downloads</a>
+    <a class="extra" href="/me.html">me</a>
+    <a class="extra" href="/code.html">code</a>
+    <a class="extra" href="/fun.html">fun</a>
   </div>
   
   {{ content }}
@@ -30,6 +31,13 @@
     <div class="contact">
       <p>
         <a href="http://willieyao.us/">willieyao.us</a><br />
+      </p>
+    </div>
+    <div class="contact">
+      <p>
+        Theme borrowed from 
+	<a href="http://tom.preston-werner.com/">mojombo</a>. Generated using
+	<a href="http://jekyllrb.com/">jekyll</a>.
       </p>
     </div>
   </div>
