Minor layout changes and updated 'Events' post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     </div>
     <div class="contact">
       <p>
-        Theme borrowed from 
+        Theme from 
 	<a href="http://tom.preston-werner.com/">mojombo</a>. Generated using
 	<a href="http://jekyllrb.com/">jekyll</a>.
       </p>
