Added Books section. New posts.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
     <a class="extra" href="/me.html">me</a>
     <a class="extra" href="/code.html">code</a>
     <a class="extra" href="/fun.html">fun</a>
+    <a class="extra" href="/books.html">books</a>
   </div>
   
   {{ content }}
